Added Edit Profile button
Also fixed dashboard widget icons

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
   text-align: center;
 }
 .postbox-container .cd .wp-menu-image:before {
-  
+  font: 100 20em/1 dashicons;
 }
 /* Assign the icons */
 .cd-account .wp-menu-image:before {
