Adjust capabilities and widgets
Added reports widget, adjusted visibility of CD pages to
'publish_posts' capability

--- a/css/client-dash.css
+++ b/css/client-dash.css
@@ -22,6 +22,9 @@
 .cd-help .wp-menu-image:before {
   content: '\f223';
 }
+.cd-reports .wp-menu-image:before {
+  content: '\f239';
+}
 
 /* CD messages */
 .cd-error{
