--- a/css/client-dash.css
+++ b/css/client-dash.css
@@ -2,12 +2,22 @@
 	font-size: 3em;
 	margin: -5px 0 0 0;
 }
-.cd .wp-menu-image:before {
-	font: 100 55px/1 dashicons;
-	speak: none;
-	display: inline-block;
+/* Assign the icons */
+.cd-account .wp-menu-image:before, .cd-account .cd-title-icon:before {
+  content: '\f337';
 }
-/* Dashboard widgets */
+.cd-help .wp-menu-image:before, .cd-help .cd-title-icon:before {
+  content: '\f223';
+}
+.cd-reports .wp-menu-image:before, .cd-reports .cd-title-icon:before {
+  content: '\f239';
+}
+/* Style dashboard widgets */
+.cd .wp-menu-image:before, .cd-title-icon:before {
+  font: 100 55px/1 dashicons;
+  speak: none;
+  display: inline-block;
+}
 .postbox-container a.cd {
   display: block;
   text-align: center;
@@ -15,17 +25,11 @@
 .postbox-container .cd .wp-menu-image:before {
   font: 100 20em/1 dashicons;
 }
-/* Assign the icons */
-.cd-account .wp-menu-image:before {
-  content: '\f337';
-}
-.cd-help .wp-menu-image:before {
-  content: '\f223';
-}
-.cd-reports .wp-menu-image:before {
-  content: '\f239';
-}
 
+/* Style the page title icons */
+.cd-title-icon{
+  vertical-align: -16px;
+}
 /* CD messages */
 .cd-error{
   background: #FF6F72;
