Adding js and css
Threw in the updown js function, enqueued the script, added a cursor:
pointer class and removed the placeholder content from the FAQ tab

--- a/css/client-dash.css
+++ b/css/client-dash.css
@@ -35,3 +35,10 @@
 .cd-title-icon{
   vertical-align: -16px;
 }
+
+/*
+* Other ==========================================
+*/
+.cd-click {
+  cursor: pointer;
+}
