Addon styling and remove testing values
Added href attribute selector for targeting specific add ons based on
their link

--- a/css/client-dash.css
+++ b/css/client-dash.css
@@ -56,7 +56,13 @@
   font: 100 12em/1 dashicons;
 }
 .cd-addon span:before {
+  content: '\f132';
+}
+.cd-addon a[href*="wp-help"] span:before {
   content: '\f223';
+}
+.cd-addon h4 {
+  margin: 0 0 20px;
 }
 @media screen and (max-width: 566px) {
 .cd-addon {
