--- a/css/client-dash.css
+++ b/css/client-dash.css
@@ -81,7 +81,7 @@
 }
 
 /*
-* Icons page
+* Icons page ========================================
 */
 #cd-dashicons-selections {
   text-align: center;
@@ -121,6 +121,81 @@
   height: auto;
   width: auto;
 }
+
+/*
+* Roles ========================================
+*/
+.cd-roles-grid-item {
+  margin-bottom: 10px;
+}
+
+.cd-roles-grid-page {
+  padding: 20px;
+  margin: 0;
+  border: 1px solid #ddd;
+  /*box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);*/
+  background: rgba(255, 255, 255, 0.4);
+}
+.cd-roles-grid-page:hover {
+  border-color: #ccc;
+}
+
+.cd-roles-grid-tab {
+  background: #fff;
+  margin: 0;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-top: none;
+}
+
+.cd-roles-grid-block {
+  border-color: rgba(0,0,0,0.3);
+}
+
+.cd-roles-grid-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.cd-roles-grid-tab > .cd-roles-grid-title {
+  border-bottom: 2px dashed rgba(0,0,0,0.1);
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.cd-roles-grid-block > .cd-roles-grid-title {
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.cd-roles-grid-toggle {
+  float: right;
+  cursor: pointer;
+}
+.cd-roles-grid-toggle:after {
+  content: "";
+  display: inline-block;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+
+  -webkit-transition: all 200ms;
+  -moz-transition: all 200ms;
+  -ms-transition: all 200ms;
+  -o-transition: all 200ms;
+  transition: all 200ms;
+}
+.cd-roles-grid-toggle.closed:after {
+  border-top: 15px solid rgba(0,0,0,0.2);
+}
+.cd-roles-grid-toggle.open:after {
+  border-bottom: 15px solid rgba(0,0,0,0.2);
+}
+
+.cd-roles-grid-checkbox {
+  margin-right: 20px;
+}
+
 
 /*
 * Other ==========================================
