--- a/css/client-dash.css
+++ b/css/client-dash.css
@@ -86,6 +86,8 @@
 .cd-addon {
   background-color: rgba(255, 255, 255, 0.5);
   text-align: center;
+  margin: 4px 0 0 8px;
+  padding: 15px;
 }
 
 .cd-addon a {
