--- a/assets/css/client-dash.css
+++ b/assets/css/client-dash.css
@@ -87,6 +87,14 @@
     vertical-align: middle;
 }
 
+.cd-sections-menu {
+    margin-bottom: 20px;
+}
+
+.cd-content-section {
+    clear: both;
+}
+
 /*
 * Addons ========================================
 */
@@ -159,6 +167,7 @@
 }
 
 .cd-dashicons-grid-item .container {
+    cursor: pointer;
     border: 1px solid #aaa;
     border-radius: 3px;
     padding: 10px 0;
@@ -198,6 +207,21 @@
     .cd-dashicons-grid-item {
         width: 33.3333%;
     }
+}
+
+/*
+* Webmaster Settings
+*/
+.cd-webmaster-on {
+    padding: 5px;
+    color: #fff;
+    background-color: #1c7b09;
+}
+
+.cd-webmaster-off {
+    padding: 5px;
+    color: #fff;
+    background-color: #b60508;
 }
 
 /*
@@ -251,7 +275,6 @@
     margin-left: 10px;
     font-size: 65%;
     font-weight: normal;
-    vertical-align: text-bottom;
 }
 
 .cd-roles-grid-tab > .cd-roles-grid-title {
@@ -307,6 +330,33 @@
     margin-right: 20px;
 }
 
+.button.cd-reset-roles {
+    margin-left: 10px;
+    color: #FFE;
+    background-color: #F66;
+    border-color: #CC4242;
+    -webkit-box-shadow: inset 0 1px 0 rgba(230, 120, 120, 0.5),0 1px 0 rgba(0,0,0,.15);
+    box-shadow: inset 0 1px 0 rgba(230, 120, 120, 0.5),0 1px 0 rgba(0,0,0,.15);
+}
+
+.button.cd-reset-roles:hover {
+    background: #de5959;
+    border-color: #9a3333;
+    color: #fff;
+}
+
+.button.cd-reset-roles:active {
+    background: #b74b4b !important;
+    border-color: #712626;
+    color: #fff;
+}
+
+.button.cd-reset-roles:focus {
+    background: #de5959;
+    border-color: #9a3333;
+    color: #fff;
+}
+
 /*
 * Structuring ===================================
 */
@@ -335,6 +385,98 @@
 }
 
 /*
+* Help tips ======================================
+*/
+.cd-tip {
+    position: absolute;
+    top: 50%;
+    margin-top: -25px;
+    width: 200px;
+    padding: 10px;
+    background: #fff;
+    box-shadow: 0 0 30px rgba(0,0,0,0.2);
+    font-size: 14px;
+    font-weight: normal;
+    -webkit-transition: all 500ms;
+    -moz-transition: all 500ms;
+    -o-transition: all 500ms;
+    transition: all 500ms;
+}
+
+.cd-tip-hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.cd-tip.cd-tip-left.cd-tip-hidden {
+    margin-left: -10px;
+}
+
+.cd-tip.cd-tip-right.cd-tip-hidden {
+    margin-right: -10px;
+}
+
+.cd-tip.cd-tip-left {
+    left: 100%;
+    margin-left: 8px;
+    text-align: left;
+}
+
+.cd-tip.cd-tip-right {
+    right: 100%;
+    margin-right: 8px;
+    text-align: right;
+}
+
+.cd-tip:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    margin-top: -10px;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+}
+
+.cd-tip-close {
+    position: absolute;
+    top: -2px;
+    color: #aaa;
+}
+
+.cd-tip-close:hover {
+    color: #c64444;
+}
+
+.cd-tip-right .cd-tip-close {
+    left: 2px;
+}
+
+.cd-tip-left .cd-tip-close {
+    right: 2px;
+}
+
+.cd-tip.cd-tip-right:after {
+    right: 0;
+    margin-right: -10px;
+    border-left: 10px solid #fff;
+}
+
+.cd-tip.cd-tip-left:after {
+    left: 0;
+    margin-left: -10px;
+    border-right: 10px solid #fff;
+}
+
+/* Individual tips */
+.cd-tip-webmaster-off {
+    margin-top: -19px !important;
+}
+
+.cd-tip-all-disabled {
+    margin-top: -31px !important;
+}
+
+/*
 * Other ==========================================
 */
 
@@ -344,4 +486,50 @@
 
 .cd-click {
     cursor: pointer;
+}
+
+#cd-ajax-cover {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10000;
+    opacity: 0;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.cd-toggle-switch {
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: middle;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+.cd-toggle-switch:before, .cd-toggle-switch:after {
+    display: block;
+    font-size: 10px;
+    padding: 5px 3px;
+    color: #fff;
+    background-color: #aaa;
+}
+
+.cd-toggle-switch:before {
+    content: "ON";
+    border-bottom: 1px solid #ddd;
+}
+
+.cd-toggle-switch:after {
+    content: "OFF";
+}
+
+.cd-toggle-switch.on:before {
+    background-color: #1c7b09;
+}
+
+.cd-toggle-switch.off:after {
+    background-color: #b60508;
 }
