--- a/assets/css/scss/_settings-widgets.scss
+++ b/assets/css/scss/_settings-widgets.scss
@@ -15,7 +15,13 @@
 }
 
 #cd-dash-widgets-droppable {
-  min-height: 40px;
+  min-height: 40px;;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .cd-dash-widget {
