--- a/assets/css/scss/_settings-widgets.scss
+++ b/assets/css/scss/_settings-widgets.scss
@@ -48,6 +48,9 @@
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  &.deactivated {
+    display: none !important;
+  }
 }
 
 .cd-dash-widget-title {
