--- a/assets/scss/_tips.scss
+++ b/assets/scss/_tips.scss
@@ -5,7 +5,7 @@
   width: 200px;
   padding: 10px;
   background: #fff;
-  box-shadow: 0 0 30px rgba(0,0,0,0.2);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
   font-size: 14px;
   font-weight: normal;
   -webkit-transition: all 500ms;
