--- a/assets/scss/_settings-display.scss
+++ b/assets/scss/_settings-display.scss
@@ -80,8 +80,8 @@
   color: #FFE;
   background-color: #F66;
   border-color: #CC4242;
-  -webkit-box-shadow: inset 0 1px 0 rgba(230, 120, 120, 0.5),0 1px 0 rgba(0,0,0,.15);
-  box-shadow: inset 0 1px 0 rgba(230, 120, 120, 0.5),0 1px 0 rgba(0,0,0,.15);
+  -webkit-box-shadow: inset 0 1px 0 rgba(230, 120, 120, 0.5), 0 1px 0 rgba(0, 0, 0, .15);
+  box-shadow: inset 0 1px 0 rgba(230, 120, 120, 0.5), 0 1px 0 rgba(0, 0, 0, .15);
 }
 
 .button.cd-reset-roles:hover {
