--- a/assets/scss/client-dash.scss
+++ b/assets/scss/client-dash.scss
@@ -1,6 +1,7 @@
 @import "basic-structuring";
 @import "dashboard";
-@import "other";
+@import "defaults";
+@import "elements";
 @import "page";
 @import "settings-addons";
 @import "settings-display";
