--- a/assets/scss/clientdash.scss
+++ b/assets/scss/clientdash.scss
@@ -8,4 +8,5 @@
 @import "settings-icons";
 @import "settings-webmaster";
 @import "settings-widgets";
+@import "settings-adminmenu";
 @import "tips";
