--- a/assets/scss/clientdash.scss
+++ b/assets/scss/clientdash.scss
@@ -1,3 +1,5 @@
+// TODO Re-format all scss files according to scss (originally created as css)
+
 @import "basic-structuring";
 @import "dashboard";
 @import "defaults";
