--- a/assets/scss/clientdash.scss
+++ b/assets/scss/clientdash.scss
@@ -1,4 +1,4 @@
-// TODO Re-format all scss files according to scss (originally created as css)
+// FUTUREBUILD Re-format all scss files according to scss (originally created as css)
 
 @import "basic-structuring";
 @import "dashboard";
