--- a/assets/scss/_settings-menus.scss
+++ b/assets/scss/_settings-menus.scss
@@ -1,3 +1,8 @@
+// Hide the first "Collapse menu" link (which is only there because of a hack I'm using)
+#adminmenu #collapse-menu:first-of-type {
+  display: none;
+}
+
 .cd-content-section {
 
   // Manage menus
@@ -96,6 +101,27 @@
 
   // Right side
   #menu-management-liquid {
+
+    // Deal with svg's as "icons" (taken from WP core because it won't apply to this part of the DOM)
+    .menu-item-icon {
+      float: left;
+      width: 30px;
+      height: 20px;
+      margin: 0;
+      text-align: center;
+      vertical-align: middle;
+
+      * {
+        vertical-align: middle;
+      }
+
+      &.svg {
+        background-repeat: no-repeat;
+        background-position: center;
+        -webkit-background-size: 20px auto;
+        background-size: 20px auto;
+      }
+    }
 
     // Extra params arrow
     .cd-extra-params:after {
