--- a/src/assets/scss/clientdash.scss
+++ b/src/assets/scss/clientdash.scss
@@ -4,10 +4,11 @@
 @import "defaults";
 @import "elements";
 @import "page";
+@import "settings-common";
 @import "settings-addons";
+@import "settings-adminmenu";
 @import "settings-display";
 @import "settings-icons";
 @import "settings-webmaster";
 @import "settings-widgets";
-@import "settings-menus";
 @import "tips";
