--- a/src/assets/scss/_settings-common.scss
+++ b/src/assets/scss/_settings-common.scss
@@ -1,4 +1,4 @@
-.cd-product-info-sidebar {
+.cd-settings-sidebar {
   box-sizing: border-box;
   padding-left: 1em;
   margin-top: 1em;
@@ -12,7 +12,7 @@
     width: 20%;
   }
 
-  .cd-product-info-sidebar-section {
+  .cd-settings-sidebar-section {
     background-color: #fff;
     border: 1px solid #e5e5e5;
     border-bottom-width: 0;
@@ -36,11 +36,11 @@
     }
   }
 
-  .cd-product-info-sidebar-cta {
+  .cd-settings-sidebar-centered {
     text-align: center;
   }
 
-  .cd-product-info-sidebar-ratings {
+  .cd-settings-sidebar-ratings {
     direction: rtl;
     text-align: center;
 
