--- a/assets/src/scss/customize/clientdash-customize.scss
+++ b/assets/src/scss/customize/clientdash-customize.scss
@@ -1,6 +1,6 @@
 @import "settings";
 
-@import "../icons";
+@import "../global/icons";
 @import "base";
 @import "common";
 @import "dashicons-selector";
