Add feed settings to settings page

--- a/assets/src/scss/admin/_admin-page.scss
+++ b/assets/src/scss/admin/_admin-page.scss
@@ -1,4 +1,4 @@
-.cd-adminpage-content {
+.clientdash-adminpage-content {
   background-color: #fff;
   box-shadow: 0 1px 1px rgba(#000, 0.04);
   border: 1px solid #e5e5e5;
