Initial working version

--- a/assets/src/scss/admin/_cd-page-sidebar.scss
+++ b/assets/src/scss/admin/_cd-page-sidebar.scss
@@ -45,6 +45,13 @@
     text-align: center;
   }
 
+  .clientdash-page-sidebar-actions {
+    .button-hero {
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+    }
+  }
+
   .clientdash-page-sidebar-ratings {
     direction: rtl;
     text-align: center;
